--- a/base/src/main/res/values/strings.xml
+++ b/base/src/main/res/values/strings.xml
@@ -28,6 +28,7 @@
     <string name="update_available">New update available</string>
     <string name="wrong_abi">Uhoh! You\'re using the wrong version of Butter for Android. The right version is being downloaded right now, if possible. If the installer is not started within a minute then your device is not supported or your internet connection is broken, which means you should try again later. If the installer fails then you must install the right version manually.</string>
     <string name="press_install">Press to install</string>
+    <string name="install">Install</string>
 	<string name="movies_error" translatable="false">No movies found</string>
     <string name="loading_data">Loading data…</string>
     <string name="loading_details">Loading details…</string>
